Set up Firebase Deploy

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
 </head>
 
 <body>
-	<NavBar>
+	<!-- <NavBar>
 		<p id="logo">Hello World!</p>
 		<NavList>
 			<a href="./">Home</a>
 		</NavList>
-	</NavBar>
+	</NavBar> -->
 	<center>
-		<h1 id="MainMessage">Hello {{N}}!</h1>
+		<h1 id="MainMessage">Hello World!</h1>
 	</center>
 </body>
