--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
 		</NavList>
 	</NavBar> -->
 	<center>
-		<h1 id="MainMessage">hello</h1>
+		<h1 id="MainMessage">Rey is a cool guy</h1>
 	</center>
 </body>
