Cleaned all boilerplate/bloat code

--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,5 @@
 </head>
 
 <body>
-	<!-- <NavBar>
-		<p id="logo">Hello World!</p>
-		<NavList>
-			<a href="./">Home</a>
-		</NavList>
-	</NavBar> -->
-	<center>
-		<h1 id="MainMessage">Welcome to Azoic!</h1>
-		<a href="about.html">About us</a>
-		<p>Does this thing update in real time?</p>
-	</center>
+	<h1 id="AzoicTitle">Welcome to Azoic!</h1>
 </body>
