--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,15 @@
 </head>
 
 <body>
-	<h1 id="AzoicTitle">Welcome to Azoic!</h1>
+
+	<nav role="navigation" class="primary-navigation">
+	  <ul>
+		<li><a href="#">Home</a></li>
+		<!--<li><a href="#">Azoic</a></li>-->
+		<li><a href="#">About</a></li>
+		<li><a href="#">Contact</a></li>
+	  </ul>
+	</nav>
+
+	<h1 id="AzoicTitle">TumbleWeed Games</h1>
 </body>
