--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,13 @@
 </head>
 
 <body>
+	<h1 id="AzoicTitle">TumbleWeed Games</h1>
 
 	<nav role="navigation" class="primary-navigation">
-	  <ul>
-		<li><a href="#">Home</a></li>
-		<!--<li><a href="#">Azoic</a></li>-->
-		<li><a href="#">About</a></li>
-		<li><a href="#">Contact</a></li>
-	  </ul>
-	</nav>
-
-	<h1 id="AzoicTitle">TumbleWeed Games</h1>
+		<ul>
+		  <li><a href="index.html">Home</a></li>
+		  <li><a href="AboutUs.html">About Us</a></li>
+		  <li><a href="Contact.html">Contact</a></li>
+		</ul>
+	  </nav>
 </body>
