Added linkedIn href

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -4,22 +4,23 @@
 </head>
 
 <body>
-	<h1 id="AzoicTitle">About Us</h1>
-
-	<nav role="navigation" class="primary-navigation">
-		<ul>
-		  <li><a href="index.html">Home</a></li>
-		  <li><a href="AboutUs.html">About Us</a></li>
-		  <li><a href="Contact.html">Contact</a></li>
+    
+    <nav role="navigation" class="primary-navigation">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="AboutUs.html">About Us</a></li>
+            <li><a href="Contact.html">Contact</a></li>
 		</ul>
-	  </nav>
-
+    </nav>
+    
+    <h1 id="AboutUsTitle">About Us</h1>
       <div class="cardContainer">
       <div class="card">
         <img src="connorProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h4><b>Connor Younge</b></h4> 
-          <p>Lead Producer & Programmer</p> 
+          <p>Director & Programmer</p> 
+          <a class="LinkedIn" href="https://www.linkedin.com/in/connor-young-03629a1b5">LinkedIn</a>
         </div>
       </div>
 
@@ -27,7 +28,8 @@
         <img src="placeholder.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h4><b>Tina Chiang</b></h4> 
-          <p>Lead Producer & Advisor</p> 
+          <p>Co Director & Artist</p> 
+          <a class="LinkedIn"  href="index.html">LinkedIn</a>
         </div>
       </div>
     </div>
