--- a/src/Contact.html
+++ b/src/Contact.html
@@ -4,8 +4,6 @@
 </head>
 
 <body>
-	<h1 id="AzoicTitle">Contact Us</h1>
-
 	<nav role="navigation" class="primary-navigation">
 		<ul>
 		  <li><a href="index.html">Home</a></li>
@@ -13,4 +11,8 @@
 		  <li><a href="Contact.html">Contact</a></li>
 		</ul>
 	  </nav>
+
+	<h1 id="AboutUsTitle">Contact Us</h1>
+	
+	<p>So like check our linked ins yeah?</p>
 </body>
