Added team to about us site and links

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -14,24 +14,53 @@
     </nav>
     
     <h1 id="AboutUsTitle">About Us</h1>
-      <div class="cardContainer">
+    <div class="cardContainer">
       <div class="card">
         <img src="connorProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
-          <h4><b>Connor Younge</b></h4> 
+          <h1>Connor Younge</h1> 
           <p>Director & Programmer</p> 
-          <a class="LinkedIn" href="https://www.linkedin.com/in/connor-young-03629a1b5">LinkedIn</a>
+         <a href="https://www.linkedin.com/in/connor-young-03629a1b5"> <h2 class="LinkedIn">LinkedIn</h2></a>
         </div>
       </div>
 
       <div class="card">
         <img src="placeholder.jpg" class="Avatar" alt="Avatar">
         <div class="container">
-          <h4><b>Tina Chiang</b></h4> 
+          <h1>Tina Chiang</h1> 
           <p>Co Director & Artist</p> 
-          <a class="LinkedIn"  href="index.html">LinkedIn</a>
+          <a href="#"> <h2 class="LinkedIn">LinkedIn</h2></a>
         </div>
       </div>
+    </div>
+      <div class="cardContainer">
+      <div class="card">
+        <img src="placeholder.jpg" class="Avatar" alt="Avatar">
+        <div class="container">
+          <h1>Grant ...</h1> 
+          <p>Programmer</p> 
+          <a href="#"> <h2 class="LinkedIn">LinkedIn</h2></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="placeholder.jpg" class="Avatar" alt="Avatar">
+        <div class="container">
+          <h1>Declan ...</h1> 
+          <p>Artist</p> 
+          <a href="#"> <h2 class="LinkedIn">LinkedIn</h2></a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="placeholder.jpg" class="Avatar" alt="Avatar">
+        <div class="container">
+          <h1>Trystyn ...</h1> 
+          <p>Artist</p> 
+          <a href="#"> <h2 class="LinkedIn">LinkedIn</h2></a>
+        </div>
+      </div>
+
     </div>
 
 </body>
