Added names and pictures

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -35,27 +35,27 @@
     </div>
       <div class="cardContainer">
       <div class="card">
-        <img src="placeholder.jpg" class="Avatar" alt="Avatar">
+        <img src="grantProfile.png" class="Avatar" alt="Avatar">
         <div class="container">
-          <h1>Grant ...</h1> 
+          <h1>Grant Roberts</h1> 
           <p>Programmer</p> 
-          <a href="#"> <h2 class="LinkedIn">LinkedIn</h2></a>
+          <a href="https://www.linkedin.com/in/grant-roberts-85681a1ba/"> <h2 class="LinkedIn">LinkedIn</h2></a>
         </div>
       </div>
 
       <div class="card">
-        <img src="placeholder.jpg" class="Avatar" alt="Avatar">
+        <img src="declanProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
-          <h1>Declan ...</h1> 
+          <h1>Declan Boyd</h1> 
           <p>Artist</p> 
-          <a href="#"> <h2 class="LinkedIn">LinkedIn</h2></a>
+          <a href="https://www.linkedin.com/in/declan-boyd-0859b7196"> <h2 class="LinkedIn">LinkedIn</h2></a>
         </div>
       </div>
 
       <div class="card">
-        <img src="placeholder.jpg" class="Avatar" alt="Avatar">
+        <img src="tristynProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
-          <h1>Trystyn ...</h1> 
+          <h1>Tristyn Van den broek</h1> 
           <p>Artist</p> 
           <a href="#"> <h2 class="LinkedIn">LinkedIn</h2></a>
         </div>
