--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -18,7 +18,7 @@
       <div class="card">
         <img src="connorProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
-          <h1>Connor Younge</h1> 
+          <h1>Connor<br> Younge</h1> 
           <p>Director & Programmer</p> 
          <a href="https://www.linkedin.com/in/connor-young-03629a1b5"> <h2 class="LinkedIn">LinkedIn</h2></a>
         </div>
@@ -27,7 +27,7 @@
       <div class="card">
         <img src="placeholder.jpg" class="Avatar" alt="Avatar">
         <div class="container">
-          <h1>Tina Chiang</h1> 
+          <h1>Tina<br> Chiang</h1> 
           <p>Co Director & Artist</p> 
           <a href="#"> <h2 class="LinkedIn">LinkedIn</h2></a>
         </div>
@@ -37,7 +37,7 @@
       <div class="card">
         <img src="grantProfile.png" class="Avatar" alt="Avatar">
         <div class="container">
-          <h1>Grant Roberts</h1> 
+          <h1>Grant<br> Roberts</h1> 
           <p>Programmer</p> 
           <a href="https://www.linkedin.com/in/grant-roberts-85681a1ba/"> <h2 class="LinkedIn">LinkedIn</h2></a>
         </div>
@@ -46,7 +46,7 @@
       <div class="card">
         <img src="declanProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
-          <h1>Declan Boyd</h1> 
+          <h1>Declan<br> Boyd</h1> 
           <p>Artist</p> 
           <a href="https://www.linkedin.com/in/declan-boyd-0859b7196"> <h2 class="LinkedIn">LinkedIn</h2></a>
         </div>
@@ -55,7 +55,7 @@
       <div class="card">
         <img src="tristynProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
-          <h1>Tristyn Van den broek</h1> 
+          <h1>Tristyn<br> Van den broek</h1> 
           <p>Artist</p> 
           <a href="#"> <h2 class="LinkedIn">LinkedIn</h2></a>
         </div>
