--- a/src/Contact.html
+++ b/src/Contact.html
@@ -1,18 +1,29 @@
 <head>
 	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="nav.css">
+	<link rel="stylesheet" href="socialNav.css">
 	<script src="index.js"></script>
 </head>
 
 <body>
-	<nav role="navigation" class="primary-navigation">
+	<nav role="navigation" class="fill">
 		<ul>
 		  <li><a href="index.html">Home</a></li>
 		  <li><a href="AboutUs.html">About Us</a></li>
 		  <li><a href="Contact.html">Contact</a></li>
 		</ul>
 	  </nav>
-
+<article>
 	<h1 id="AboutUsTitle">Contact Us</h1>
-	
-	<p>So like check our linked ins yeah?</p>
+</article>
+
+	<div class="effect lavinia">
+		<div class="buttons">
+		  <a href="#" class="fb" title="Join us on Facebook"><i class="fa fa-facebook" aria-hidden="true">F</i></a>
+		  <a href="#" class="tw" title="Join us on Twitter"><i class="fa fa-twitter" aria-hidden="true">T</i></a>
+		  <a href="#" class="insta" title="Join us on Instagram"><i class="fa fa-instagram" aria-hidden="true">I</i></a>
+		  <a href="#" class="in" title="Join us on Linked In"><i class="fa fa-linkedin" aria-hidden="true">L</i></a>
+		  <a href="#" class="red" title="Join us on Reddit"><i class="fa fa-reddit" aria-hidden="true">R</i></a>
+		</div>
+	  </div>
 </body>
