Added some social links and made nav feel better

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -9,6 +9,7 @@
     <nav role="navigation" class="fill">
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="#">Azoic</a></li>
             <li><a href="AboutUs.html">About Us</a></li>
             <li><a href="Contact.html">Contact</a></li>
 		</ul>
@@ -22,7 +23,7 @@
       <div class="card">
         <img src="connorProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
-          <h1 class="staffName">Connor Younge</h1> 
+          <h1 class="staffName">Connor Young</h1> 
           <p class="staffRole">Co Director & Programmer</p> 
           <p></p>
         </div>
