--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 	<nav role="navigation"  class="fill">
 		<ul>
 		  <li><a href="index.html">Home</a></li>
+		  <li><a href="#">Azoic</a></li>
 		  <li><a href="AboutUs.html">About Us</a></li>
 		  <li><a href="Contact.html">Contact</a></li>
 		</ul>
@@ -20,9 +21,9 @@
 
 <div class="effect lavinia">
     <div class="buttons">
-      <a href="#" class="fb" title="Join us on Facebook"><i class="fa fa-facebook" aria-hidden="true">F</i></a>
+      <a href="https://www.facebook.com/Tumbleweed-Games-104005928299642/" class="fb" title="Join us on Facebook"><i class="fa fa-facebook" aria-hidden="true">F</i></a>
       <a href="#" class="tw" title="Join us on Twitter"><i class="fa fa-twitter" aria-hidden="true">T</i></a>
-      <a href="#" class="insta" title="Join us on Instagram"><i class="fa fa-instagram" aria-hidden="true">I</i></a>
+      <a href="https://www.instagram.com/tumbleweedgames/" class="insta" title="Join us on Instagram"><i class="fa fa-instagram" aria-hidden="true">I</i></a>
       <a href="#" class="in" title="Join us on Linked In"><i class="fa fa-linkedin" aria-hidden="true">L</i></a>
 	  <a href="#" class="red" title="Join us on Reddit"><i class="fa fa-reddit" aria-hidden="true">R</i></a>
     </div>
