Moved images and added placeholder logo

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -21,7 +21,7 @@
 
     <div class="cardContainer">
       <div class="card">
-        <img src="connorProfile.jpg" class="Avatar" alt="Avatar">
+        <img src="../images/connorProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Connor Young</h1> 
           <p class="staffRole">Co Director & Programmer</p> 
@@ -30,7 +30,7 @@
       </div>
 
       <div class="card">
-        <img src="placeholder.jpg" class="Avatar" alt="Avatar">
+        <img src="../images/placeholder.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Tina Chiang</h1> 
           <p class="staffRole">Co Director & Artist</p> 
@@ -40,7 +40,7 @@
     </div>
       <div class="cardContainer">
       <div class="card">
-        <img src="grantProfile.png" class="Avatar" alt="Avatar">
+        <img src="../images/grantProfile.png" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Grant Roberts</h1> 
           <p class="staffRole">Programmer</p> 
@@ -49,7 +49,7 @@
       </div>
 
       <div class="card">
-        <img src="declanProfile.jpg" class="Avatar" alt="Avatar">
+        <img src="../images/declanProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Declan Boyd</h1> 
           <p class="staffRole">Artist</p> 
@@ -58,7 +58,7 @@
       </div>
 
       <div class="card">
-        <img src="tristynProfile.jpg" class="Avatar" alt="Avatar">
+        <img src="../images/tristynProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Tristyn Van den broek</h1> 
           <p class="staffRole">Artist</p> 
