--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 	  </nav>
 	  
 	  <article>
-	<h1 id="AzoicTitle">TumbleWeed Games</h1>
+		<img id="AzoicTitle" src="../images/comapnyLogo.png">
 </article>
 
 <div class="effect lavinia">
