--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -1,4 +1,5 @@
 <head>
+  <title>TumbleWeed Games</title>
 	<link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="nav.css">
 	<script src="index.js"></script>
