--- a/src/Contact.html
+++ b/src/Contact.html
@@ -1,4 +1,5 @@
 <head>
+	<title>TumbleWeed Games</title>
 	<link rel="stylesheet" href="index.css">
 	<link rel="stylesheet" href="nav.css">
 	<link rel="stylesheet" href="socialNav.css">
