Added Jessica to about us page

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -35,26 +35,6 @@
         <div class="container">
           <h1 class="staffName">Tina Chiang</h1> 
           <p class="staffRole">Co Director & Artist</p> 
-
-        </div>
-      </div>
-    </div>
-      <div class="cardContainer">
-      <div class="card">
-        <img src="images/grantProfile.png" class="Avatar" alt="Avatar">
-        <div class="container">
-          <h1 class="staffName">Grant Roberts</h1> 
-          <p class="staffRole">Programmer</p> 
-
-        </div>
-      </div>
-
-      <div class="card">
-        <img src="images/declanProfile.jpg" class="Avatar" alt="Avatar">
-        <div class="container">
-          <h1 class="staffName">Declan Boyd</h1> 
-          <p class="staffRole">Artist</p> 
-
         </div>
       </div>
 
@@ -63,7 +43,33 @@
         <div class="container">
           <h1 class="staffName">Tristyn Van den broek</h1> 
           <p class="staffRole">Artist</p> 
+        </div>
+      </div>
 
+
+    </div>
+      <div class="cardContainer">
+      <div class="card">
+        <img src="images/grantProfile.png" class="Avatar" alt="Avatar">
+        <div class="container">
+          <h1 class="staffName">Grant Roberts</h1> 
+          <p class="staffRole">General Programmer</p> 
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="images/declanProfile.jpg" class="Avatar" alt="Avatar">
+        <div class="container">
+          <h1 class="staffName">Declan Boyd</h1> 
+          <p class="staffRole">Artist</p> 
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="images/placeholder.jpg" class="Avatar" alt="Avatar">
+        <div class="container">
+          <h1 class="staffName">Jessica Sproule</h1> 
+          <p class="staffRole">Animator & Artist</p> 
         </div>
       </div>
 
