Added jesses profile

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="card">
-        <img src="images/placeholder.jpg" class="Avatar" alt="Avatar">
+        <img src="images/jessicaProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Jessica Sproule</h1> 
           <p class="staffRole">Animator & Artist</p> 
