added more staff details

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -25,7 +25,8 @@
         <img src="images/connorProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Connor Young</h1> 
-          <p class="staffRole">Co Director & Programmer</p> 
+          <p class="staffRole">Lead Director</p> 
+          <p class="staffRole">General Programmer</p> 
           <p></p>
         </div>
       </div>
@@ -34,7 +35,8 @@
         <img src="images/tristynProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Tristyn Van den broek</h1> 
-          <p class="staffRole">Artist</p> 
+          <p class="staffRole">Lead Technical Artist</p> 
+          <p class="staffRole">General Artist</p> 
         </div>
       </div>
 
@@ -45,7 +47,8 @@
         <img src="images/grantProfile.png" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Grant Roberts</h1> 
-          <p class="staffRole">General Programmer</p> 
+          <p class="staffRole">Lead Programmer</p>
+          <p class="staffRole">Boids Master</p> 
         </div>
       </div>
 
@@ -53,7 +56,8 @@
         <img src="images/declanProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Declan Boyd</h1> 
-          <p class="staffRole">Artist</p> 
+          <p class="staffRole">VFX Artist</p> 
+          <p class="staffRole">Water Boy</p> 
         </div>
       </div>
 
@@ -61,7 +65,8 @@
         <img src="images/jessicaProfile.jpg" class="Avatar" alt="Avatar">
         <div class="container">
           <h1 class="staffName">Jessica Sproule</h1> 
-          <p class="staffRole">Animator & Artist</p> 
+          <p class="staffRole">Lead Animator</p> 
+          <p class="staffRole">General Artist</p> 
         </div>
       </div>
 
